<resources>
        <string name="app_name">MyApp</string>
        <string name="textViewcatalogscolar">Alege un profil!</string>
        <string name="textViewTeacher">Profesor</string>
        <string name="textViewStudent">Elev</string>
        <string name="textViewParent">Părinte</string>
        <string name="textViewHello">Bine ai venit!</string>
        <string name="textViewCreateUser">Încă nu ai cont? Înregistrează-te!</string>
        <string name="textInputLayout">Parolă</string>
        <string name="textInputLayout2">Email</string>
        <string name="buttonSignIn">Sign in</string>
        <string name="Register">Înregistrare elev</string>
        <string name="firstName">Nume</string>
        <string name="lastName">Prenume</string>
        <string name="phone">Telefon</string>
        <string name="Email">Email</string>
        <string name="Password">Parolă</string>
        <string name="Subject">Număr matricol</string>
        <string name="textViewAlegeClasa">Fac parte din clasa: </string>
        <string name="checkBoxA">A</string>
        <string name="checkBoxB">B</string>
        <string name="checkBoxC">C</string>
        <string name="checkBoxD">D</string>
        <string name="buttonRegister">Înregistrare</string>
        <string name="Register1">Înregistrare părinte</string>
        <string name="Subject1">Număr matricol elev</string>
        <string name="Register2">Înregistrare profesor</string>
        <string name="textViewAlegeClasa1">Predau clasei:</string>
        <string name="Subject3">Materia</string>
        <string name="Language">Selectează limba...</string>
        <string name="languageTypeRo">Română</string>
        <string name="languageTypeEn">Engleză</string>
        <string name="languageTypeDe">Germană</string>
        <string name="languageTypeFr">Franceză</string>
        <string name="empty_errfName">Este necesară introducerea numelui!</string>
        <string name="empty_errlName">Este necesară introducerea prenumelui!</string>
        <string name="empty_errPhone">Este necesară introducerea numărului de telefon!</string>
        <string name="empty_errEmail">Este necesară introducerea unei adrese de email!</string>
        <string name="empty_errPass">Introduceți o parolă!</string>
        <string name="length_errPass">Parola necesită o lungime de minim 6 caractere!</string>
        <string name="empty_errSubject">Este necesară introducerea unei materii!</string>
        <string name="reg_successful">Înregistrarea s-a făcut cu succes!</string>
        <string name="reg_failed">Înregistrare eșuată.Încearcă din nou!</string>
        <string name="empty_regNr">Este necesară introducerea unui număr matricol!</string>
        <string name="length_regNr">Numărul matricol trebuie să aibă 5 caractere!</string>
        <string name="login_failed">Eroare la logare.Parola sau adresa de email sunt incorecte!</string>
        <string name="toast_chooseClass">Alege clasele la care predai!</string>
        <string name="tv_grades">Catalog</string>
        <string name="buttonLogout">Deconectare</string>
        <string name="subj_desc">Materie:</string>
        <string name="date_desc">Data:</string>
        <string name="regNr_desc">Număr matricol:</string>
        <string name="grade_desc">Notă:</string>
        <string name="addgrade_tv">Adăugare note noi</string>
        <string name="tv_specification">Să se completeze câmpurile umătoare:</string>
        <string name="editTextSubject">Materia</string>
        <string name="editTextDate">Data</string>
        <string name="editTextregNr">Număr matricol</string>
        <string name="editTextGrade">Notă obținută</string>
        <string name="buttonAddGrade">Adaugă nota</string>
        <string name="buttonBack">Înapoi la catalog</string>
        <string name="empty_errmSubj">Este necesară introducerea materiei!</string>
        <string name="empty_errmData">Este necesară introducerea unei date!</string>
        <string name="empty_errmRegNr">Este necesară introducerea numărului matricol!</string>
        <string name="length_errmRegNr">Numărul matricol trebuie să aibă 5 caractere!</string>
        <string name="empty_errmGrade">Este necesară introducerea unei note!</string>
        <string name="length_errmGrade">Nota se poate acorda doar între 1 și 10!</string>
        <string name="insertgrade_successful">Nota a fost inserată cu succes!</string>
        <string name="insertgrade_faild">Nota nu a putut fi inserată..încercă din nou!</string>




</resources>