<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background"
    tools:context=".NewGradeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarnewgrades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CDA684"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/addgrade_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addgrade_tv"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            />

   </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_specification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_specification"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="17sp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
       app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarnewgrades"/>

    <EditText
        android:id="@+id/editTextSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:inputType="text"
        android:hint="@string/editTextSubject"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarnewgrades"
        android:layout_marginTop="160dp"
       />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:inputType="date"
        android:hint="@string/editTextDate"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextSubject"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/editTextregNr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:inputType="number"
        android:hint="@string/editTextregNr"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextDate"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/editTextGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:inputType="number"
        android:hint="@string/editTextGrade"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextregNr"
        android:layout_marginTop="30dp" />


    <Button
        android:id="@+id/buttonAddGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bd_botton_black"
        android:padding="5dp"
        android:text="@string/buttonAddGrade"
        android:textColor="#000000"
        android:layout_marginTop="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextGrade"

        />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bd_botton_black"
        android:padding="5dp"
        android:text="@string/buttonBack"
        android:textColor="#000000"
        android:layout_marginTop="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonAddGrade" />



</androidx.constraintlayout.widget.ConstraintLayout>