<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="25dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="#ffffff"
    android:alpha="0.7"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/subj_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subj_desc"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:textColor="#000000"
            android:id="@+id/subject_tv"
            android:hint="subject" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_desc"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_margin="10dp"
                android:textColor="#000000"
                android:id="@+id/date_tv"
                android:hint="date" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/regNr_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regNr_desc"
                android:textColor="#000000"
                android:textSize="15sp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_margin="10dp"
                android:textColor="#000000"
                android:id="@+id/regNr_tv"
                android:hint="register number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/grade_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_desc"
                android:textColor="#000000"
                android:textSize="15sp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_margin="10dp"
                android:textColor="#000000"
                android:id="@+id/grade_tv"
                android:hint="grade" />

        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>