<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF2CC"
    tools:context=".DetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CDA684"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarTop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icons8_undo_26" />


    <TextView
        android:id="@+id/textViewcatalogscolar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewcatalogscolar"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarTop"
        app:layout_constraintLeft_toRightOf="@id/backButton"
        app:layout_constraintTop_toTopOf="parent" />



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CDA684"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent" />


    <ImageButton
        android:id="@+id/HelpButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@null"
        android:padding="4dp"
        android:visibility="visible"
        android:src="@drawable/ic_baseline_help_outline_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imageViewStud"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:src="@drawable/student"
        app:layout_constraintBottom_toBottomOf="@id/toolbarBottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbarTop" />

    <ImageView
        android:id="@+id/imageViewTeacher"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:src="@drawable/teacher__1_"
        app:layout_constraintBottom_toTopOf="@id/imageViewStud"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarTop" />

    <ImageView
        android:id="@+id/imageViewParent"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:src="@drawable/teacher__2_"
        app:layout_constraintBottom_toTopOf="@id/toolbarBottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewStud" />

    <TextView
        android:id="@+id/textViewTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewTeacher"
        android:textColor="#737373"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewTeacher" />

    <TextView
        android:id="@+id/textViewStud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewStudent"
        android:textColor="#737373"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewStud" />

    <TextView
        android:id="@+id/textViewParent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewParent"
        android:textColor="#737373"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewParent" />

</androidx.constraintlayout.widget.ConstraintLayout>
